Adding 7-index.html, styles/4-common.css, styles/3-header.css, styles/3-footer.css, styles/6-filters.css, styles/7-places.css, images/

--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>AirBnB clone</title>
-    <link rel="stylesheet" type="text/css" href="styles/3-header.css" />
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>AirBnB clone</title>
+	<link rel="stylesheet" type="text/css" href="styles/3-header.css" />
     <link rel="stylesheet" type="text/css" href="styles/4-common.css" />
     <link rel="stylesheet" type="text/css" href="styles/3-footer.css" />
     <link rel="stylesheet" type="text/css" href="styles/6-filters.css" />
+    <link rel="stylesheet" type="text/css" href="styles/7-places.css" />
     <link rel='shortcut icon' type="image/x-icon" href="images/icon.png" />
-  </head>
-  <body>
-    <header>
-      <div class="logo"></div>
-    </header>
- 
-    <div class="container">
+</head>
+<body>
+	<header>
+		<div class="logo"></div>
+	  </header>
+
+	  <div class="container">
         <section class="filters">
             <div class="locations">
               <h3>States</h3>
@@ -52,10 +55,22 @@
             </div>
             <button>Search</button>
         </section>
+        <section class="places">
+            <h1>Places</h1>
+            <article>
+                <h2>My Home</h2>
+            </article>
+            <article>
+                <h2>Tiny House</h2>
+            </article>
+            <article>
+                <h2>A suite</h2>
+            </article>
+        </section>
     </div>
-
     <footer>
       <p>Best School</p>
     </footer>
   </body>
 </html>
+	
